[#8] ✨ Create a common mixin: text-style

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -6,5 +6,8 @@
 @import './base/normalize';
 @import './base/reset';
 
+// mixins
+@import './mixins/text-style';
+
 // layouts
 @import './layouts/grids';
