--- a/frontend/src/styles/layouts/_grids.scss
+++ b/frontend/src/styles/layouts/_grids.scss
@@ -21,7 +21,6 @@ $gutter: 20px;
 $sm-columns: 4;
 $sm-margin: 5px;
 
-$lg-breakpoint: 1200px;
 $lg-columns: 12;
 $lg-unit: 75px;
 $lg-max-container: ($lg-unit + $gutter) * $lg-columns;
@@ -47,7 +46,7 @@ $lg-max-container: ($lg-unit + $gutter) * $lg-columns;
     }
   }
 
-  @media screen and (min-width: $lg-breakpoint) {
+  @include responsive(D) {
     max-width: $lg-max-container;
     padding: 0;
 
