--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -10,6 +10,7 @@
 // mixins
 @import './mixins/text-style';
 @import './mixins/responsive';
+@import './mixins/positions';
 
 // layouts
 @import './layouts/grids';
