[#11] 🩹 Renamed class name 'button-group' to 'login-button-group'

--- a/frontend/src/styles/layouts/_login.scss
+++ b/frontend/src/styles/layouts/_login.scss
@@ -4,7 +4,7 @@
   height: 100vh;
   background-color: $background;
 
-  .button-group {
+  .login-button-group {
     @include flexbox;
     @include pos-center;
   }
