--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -14,6 +14,9 @@
 @import './mixins/positions';
 @import './mixins/flexbox';
 
+// modules
+@import './modules/forms';
+
 // layouts
 @import './layouts/grids';
 @import './layouts/login';
