--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import './base/fonts';
 @import './base/normalize';
 @import './base/reset';
+@import './base/globals';
 
 // mixins
 @import './mixins/text-style';
