[#11] 💄 Implement login-form-group component

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -20,6 +20,9 @@
 @import './modules/forms';
 @import './modules/icons';
 
+// components
+@import './components/login-form-group';
+
 // layouts
 @import './layouts/grids';
 @import './layouts/login';
