--- a/frontend/src/styles/layouts/_gnb.scss
+++ b/frontend/src/styles/layouts/_gnb.scss
@@ -1,4 +1,29 @@
 .gnb {
+  border-bottom: 1px solid $border;
+
+  &-wrapper {
+    @include flexbox(between);
+    height: 60px;
+  }
+
+  &-right {
+    .button-group {
+      @include flexbox(end);
+    }
+
+    .gnb-search-button {
+      margin-right: 4px;
+    }
+  }
+
+  &-icon-button {
+    @include flexbox;
+    width: 32px;
+    height: 32px;
+    font-size: 24px;
+    color: $secondary;
+  }
+
   .logo {
     a {
       display: block;
@@ -7,7 +32,7 @@
     img {
       display: block;
       width: auto;
-      height: 40px;
+      height: 50px;
     }
   }
 }
