--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -22,6 +22,7 @@
 
 // components
 @import './components/login-form-group';
+@import './components/gnb-nav';
 
 // layouts
 @import './layouts/grids';
