--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -23,6 +23,7 @@
 // components
 @import './components/login-form-group';
 @import './components/gnb-nav';
+@import './components/gnb-icon-buttons';
 
 // layouts
 @import './layouts/grids';
