--- a/frontend/src/styles/components/_gnb-nav.scss
+++ b/frontend/src/styles/components/_gnb-nav.scss
@@ -1,18 +1,32 @@
 .gnb-nav {
+  $padding: 8px;
+
   &-list {
     @include flexbox(start);
+    position: relative;
+    right: $padding;
   }
 
   &-item {
-    margin-right: 24px;
+    margin-right: 24px - ($padding * 2);
+
+    &.is-active,
+    &:hover {
+      button {
+        color: $purple-dark;
+      }
+    }
 
     &:last-child {
       margin-right: 0;
     }
 
-    a {
+    button {
       @include text-style(18, $primary);
+      display: block;
+      padding: $padding;
       font-weight: 700;
+      white-space: nowrap;
     }
   }
 }
