--- a/frontend/src/styles/layouts/_login.scss
+++ b/frontend/src/styles/layouts/_login.scss
@@ -20,7 +20,7 @@
     background-color: $secondary;
     border-radius: 50%;
     opacity: 0.4;
-    box-shadow: 10px 10px 30px #000;
+    box-shadow: $button-shadow;
     margin: 0 20px;
     transition: background-color 300ms ease-in-out;
 
