--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import './constants/colors';
 @import './constants/typography';
 @import './constants/breakpoints';
+@import './constants/box-shadows';
 
 // base
 @import './base/fonts';
@@ -24,6 +25,7 @@
 @import './components/login-form-group';
 @import './components/gnb-nav';
 @import './components/gnb-icon-buttons';
+@import './components/my-menu';
 
 // layouts
 @import './layouts/grids';
