[#11] 💄 Displace my-menu-content and apply button status

--- a/frontend/src/styles/components/_gnb-icon-buttons.scss
+++ b/frontend/src/styles/components/_gnb-icon-buttons.scss
@@ -29,7 +29,8 @@
       margin-right: 0;
     }
 
-    &:hover {
+    &:hover,
+    &.is-active {
       color: $white;
       background-color: $purple;
     }
