--- a/frontend/src/styles/components/_my-menu.scss
+++ b/frontend/src/styles/components/_my-menu.scss
@@ -1,12 +1,22 @@
 .my-menu {
+  $icon-size: 32px;
   $tooltip-size: 12px;
 
   position: relative;
 
   &-content {
     @include pos-center-x;
+    top: $icon-size + $tooltip-size + 8px;
+    opacity: 0;
+    visibility: hidden;
     border-radius: 4px;
     box-shadow: $dropdown-shadow;
+    transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
+
+    &.is-active {
+      opacity: 1;
+      visibility: visible;
+    }
 
     &::before,
     &::after {
