[#11] 🍱 Update logo assets

--- a/frontend/src/styles/modules/_icons.scss
+++ b/frontend/src/styles/modules/_icons.scss
@@ -30,9 +30,21 @@ i {
 .ic-search:before {
   content: '\e90d';
 }
+.ic-file:before {
+  content: '\e926';
+}
 .ic-user:before {
   content: '\e971';
 }
 .ic-key:before {
   content: '\e98d';
+}
+.ic-wrench:before {
+  content: '\e991';
+}
+.ic-business:before {
+  content: '\e9ae';
+}
+.ic-truck:before {
+  content: '\e9b0';
 }
